Update to skin language files

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1,6 +1,6 @@
-# XBMC Media Center language file
-# Addon Name: xTV-SAF
-# Addon id: skin.xtv-saf
+# Kodi Media Center language file
+# Addon Name: AppTV
+# Addon id: skin.apptv
 # Addon Provider: Wyrm
 msgid ""
 msgstr ""
@@ -561,7 +561,11 @@ msgid "Music library entry point"
 msgstr ""
 
 msgctxt "#31924"
-msgid "PVR entry point"
+msgid "TV entry point"
+msgstr ""
+
+msgctxt "#31925"
+msgid "Radio entry point"
 msgstr ""
 
 #empty strings from id 31925 to 31929
