Language changes for recent skin changes

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -267,11 +267,7 @@ msgctxt "#31681"
 msgid "Artwork Downloader"
 msgstr ""
 
-msgctxt "#31682"
-msgid "Theme Downloader"
-msgstr ""
-
-#empty strings from id 31683 to 31687
+#empty strings from id 31682 to 31687
 
 msgctxt "#31688"
 msgid "Go Back"
@@ -316,7 +312,31 @@ msgctxt "#31706"
 msgid "Advanced Channel Rules"
 msgstr ""
 
-#empty strings from id 31707 to 31800
+msgctxt "#31707"
+msgid "Search TV"
+msgstr ""
+
+msgctxt "#31708"
+msgid "Search Radio"
+msgstr ""
+
+msgctxt "#31709"
+msgid "TV Guide"
+msgstr ""
+
+msgctxt "#31710"
+msgid "Radio Guide"
+msgstr ""
+
+msgctxt "#31711"
+msgid "TV Recordings"
+msgstr ""
+
+msgctxt "#31712"
+msgid "Radio Recordings"
+msgstr ""
+
+#empty strings from id 31713 to 31800
 #End PVR strings
 #Begin skin settings strings 31801 - 31999
 
@@ -409,12 +429,10 @@ msgid "Background visibilty"
 msgstr ""
 
 msgctxt "#31869"
-msgid "Show DVD case"
+msgid "Show Media case"
 msgstr ""
 
-msgctxt "#31870"
-msgid "Show CD case"
-msgstr ""
+#empty string from id 31870
 
 msgctxt "#31871"
 msgid "Choose Homescreen Watermark Image"
@@ -542,14 +560,30 @@ msgctxt "#31914"
 msgid "Quit button action"
 msgstr ""
 
-#empty strings from id 31915 to 31919
+msgctxt "#31915"
+msgid "TV in Home menu"
+msgstr ""
+
+msgctxt "#31916"
+msgid "Radio in Home menu"
+msgstr ""
+
+#empty string from id 31917
+
+msgctxt "#31918"
+msgid "TV Timers"
+msgstr ""
+
+msgctxt "#31919"
+msgid "Radio Timers"
+msgstr ""
 
 msgctxt "#31920"
 msgid "Movie library entry point"
 msgstr ""
 
 msgctxt "#31921"
-msgid "TV library entry point"
+msgid "TVShow library entry point"
 msgstr ""
 
 msgctxt "#31922"
