Number of minor string changes and additions

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -306,7 +306,19 @@ msgctxt "#31700"
 msgid "Available Groups"
 msgstr ""
 
-#empty string with id 31701 to 31705
+msgctxt "#31701"
+msgid "Play TV"
+msgstr ""
+
+msgctxt "#31702"
+msgid "Play Radio"
+msgstr ""
+
+msgctxt "#31703"
+msgid "Play"
+msgstr ""
+
+#empty string with id 31704 to 31705
 
 msgctxt "#31706"
 msgid "Advanced Channel Rules"
@@ -336,7 +348,15 @@ msgctxt "#31712"
 msgid "Radio Recordings"
 msgstr ""
 
-#empty strings from id 31713 to 31800
+msgctxt "#31713"
+msgid "TV Timers"
+msgstr ""
+
+msgctxt "#31714"
+msgid "Radio Timers"
+msgstr ""
+
+#empty strings from id 31715 to 31800
 #End PVR strings
 #Begin skin settings strings 31801 - 31999
 
@@ -453,7 +473,7 @@ msgstr ""
 #empty strings from id 31875 to 31879
 
 msgctxt "#31880"
-msgid "Lock \"View As\" panel"
+msgid "Lock Screen Settings panel"
 msgstr ""
 
 msgctxt "#31881"
@@ -568,15 +588,7 @@ msgctxt "#31916"
 msgid "Radio in Home menu"
 msgstr ""
 
-#empty string from id 31917
-
-msgctxt "#31918"
-msgid "TV Timers"
-msgstr ""
-
-msgctxt "#31919"
-msgid "Radio Timers"
-msgstr ""
+#empty strings from id 31917 31919
 
 msgctxt "#31920"
 msgid "Movie library entry point"
