Updated Video info screen

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -277,7 +277,11 @@ msgctxt "#31689"
 msgid "Edit Library"
 msgstr ""
 
-#empty strings from id 31690 to 31691
+#empty string id 31690
+
+msgctxt "#31691"
+msgid "You might also enjoy"
+msgstr ""
 
 msgctxt "#31692"
 msgid "Cinema"
