--- a/language/Tatar/strings.po
+++ b/language/Tatar/strings.po
@@ -9,13 +9,13 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Kodi Translation Team\n"
-"Language-Team: Filipino (http://www.transifex.com/projects/p/xbmc-skins/language/fil/)\n"
+"Language-Team: Tatar (http://www.transifex.com/projects/p/xbmc-skins/language/tt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fil\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Language: tt\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
-msgctxt "#31530"
-msgid "Location"
-msgstr "Lokasyon"
+msgctxt "#31026"
+msgid "Movies"
+msgstr "Кинолар"
