Cleanup strings file, add new string for Screen Settings dialog

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -162,7 +162,9 @@ msgctxt "#31556"
 msgid "Skin"
 msgstr ""
 
-#empty string with id 31557
+msgctxt "#31557"
+msgid "Screen Settings"
+msgstr ""
 
 msgctxt "#31558"
 msgid "Power Menu"
@@ -524,11 +526,7 @@ msgctxt "#31883"
 msgid "Use media overlays"
 msgstr ""
 
-msgctxt "#31884"
-msgid "Use watched state overlays"
-msgstr ""
-
-#empty strings from id 31885
+#empty strings from id 31884 to 31885
 
 msgctxt "#31886"
 msgid "Tilt icons"
