Add touch support to context menu and 3D select dialogs.
In addition a code and strings cleanup of 3D selection dialog

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -58,7 +58,11 @@ msgstr ""
 #End home strings
 #Start video strings 31126 - 31225
 
-#empty string with id 31126 - 31128
+msgctxt "#31126"
+msgid "Watch in 2D"
+msgstr ""
+
+#empty string with id 31127 - 31128
 
 msgctxt "#31129"
 msgid "Finish Time: "
@@ -174,7 +178,15 @@ msgctxt "#31559"
 msgid "System Info"
 msgstr ""
 
-#empty string with id 31560 - 31562
+msgctxt "#31560"
+msgid "Item Settings"
+msgstr ""
+
+msgctxt "#31561"
+msgid "3D Settings"
+msgstr ""
+
+#empty string with id 31562
 
 msgctxt "#31563"
 msgid "Skin Version:"
