Provide help text for Skin Settings menus

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -148,7 +148,7 @@ msgid "Don't show Skin Settings menus."
 msgstr ""
 
 msgctxt "#31305"
-msgid "Type of scrollbar to show."
+msgid "Select when to show scrollbar."
 msgstr ""
 
 msgctxt "#31306"
@@ -280,7 +280,7 @@ msgstr ""
 #empty strings id 312338 to 31339 reserved for future use.
 
 msgctxt "#31340"
-msgid "Location custom skin background image."
+msgid "Location of custom skin background image."
 msgstr ""
 
 msgctxt "#31341"
