Fix a number of issues hilited by skin check program

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -447,8 +447,9 @@ msgstr ""
 
 msgctxt "#31571"
 msgid "Raspberry Pi"
+msgstr ""
 
-msgstr ""msgctxt "#31572"
+msgctxt "#31572"
 msgid "Android"
 msgstr ""
 
