--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -54,7 +54,11 @@ msgctxt "#31036"
 msgid "Play Disc"
 msgstr ""
 
-#empty strings from id 31037 to 31125
+msgctxt "#31037"
+msgid "Now Playing"
+msgstr ""
+
+#empty strings from id 31038 to 31125
 #End home strings
 #Start video strings 31126 - 31225
 
