Update changelog in preparation for 1.2.0 release

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,11 @@
 [B]1.2.0[/B]
 Isengard Release
 
+- Changes require to make skin compatible with Kodi Isengard.
+- Minor bug fixes.
+- Add support for duration script. Will use if user has installed, otherwise use default kodi duration strings.
+- Update language files from Transifex.
+
 [B]1.1.0[/B]
 
 - Add touch capabilities to skin.
