Update changelog to reflect current state of skin.

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Isengard Release
 
 - Changes require to make skin compatible with Kodi Isengard.
 - Minor bug fixes.
+- Remove skin GUI sound and replace with files imported from new resource.uisounds.apptv resource.
 - Add support for duration script. Will use if user has installed, otherwise use default kodi duration strings.
 - Update language files from Transifex.
 
