--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -476,7 +476,11 @@ msgctxt "#31577"
 msgid "Kodi Default"
 msgstr ""
 
-#empty strings from id 31578 to 31650
+msgctxt "#31578"
+msgid "Light"
+msgstr ""
+
+#empty strings from id 31579 to 31650
 #End system strings
 #Begin Misc. strings 31651 - 31800
 
