--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,9 @@
   horizontal home sub menu before user has to scroll thru the list.
  - Added Custom Favourites menu and items to home screens.
  - Added a Light font to skin and make it the default. Old default font now called "Normal".
+ - Remove service.library.data.provider support and replace with script.skin.helper.service instead.
+ - Remove Cinemaexperience script support and replace with Cinemavision script.
+ - Update language files from Transifex.
  - Minor bug fixes.
 
 [B]1.2.0[/B]
